# billigst-mat

./: .env.example  .gitignore  ONLINE_STORES_README.md  README.md  pyproject.toml  requirements.txt  run_holdbart.py
.github/workflows/: ci.yml
config/: etilbudsavis_schedule.txt  groups.yaml  online_store_links.txt
scripts/: run_holdbart.py  verify_stores.py
src/: config.py  constants.py  db.py  etilbudsavis.py  filters.py  main.py  normalizer.py  notify.py  onlinestores.py  ranking.py  url_validator.py
tests/: test_config.py  test_db.py  test_etilbudsavis.py  test_filters.py  test_normalizer.py  test_notify.py  test_onlinestores.py  test_ranking.py  test_url_validator.py
